--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -92,9 +92,16 @@
 
 .text-box{
     padding: 10px;
-    width: 100%;
+    width: 80%;
 }
 
 .button-custom{
     width: 30%;
+}
+
+h1{
+    color: #1fa67b;
+    font-size: 18px;
+    text-align: center;
+    font-weight: bold;
 }
