--- a/src/main/resources/static/css/table.css
+++ b/src/main/resources/static/css/table.css
@@ -10,7 +10,7 @@ If you like this solution, you might also want to check out the 1.0 version:
 .responstable {
     margin: 1em 0;
     width: 100%;
-    overflow: hidden;
+    height: 100%;
     background: #FFF;
     color: #024457;
     border-radius: 10px;
