--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,9 +1,9 @@
 /*    --------------------------------------------------
 	:: Login Section
 	-------------------------------------------------- */
-#login {
-    padding-top: 50px
-}
+/*#login {*/
+    /*padding-top: 50px*/
+/*}*/
 #login .form-wrap {
     width: 30%;
     margin: 0 auto;
